multiple replica on same uri but diferent ports

--- a/PuppetMaster/dadstorm.config
+++ b/PuppetMaster/dadstorm.config
@@ -13,13 +13,13 @@ LoggingLevel light
 %%  operator spec OPERATOR_TYPE OPERATOR_PARAM1,. . ., OPERATOR_PARAMn
 %%
 
-OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/op operator_spec FILTER 3,=,"www.tecnico.ulisboa.pt"
+OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/op, tcp://localhost:11001/op operator_spec FILTER 3,=,"www.tecnico.ulisboa.pt"
 
-%OP2 input_ops OP1 repl_fact 2 routing random address tcp://localhost:11002/op, tcp://localhost:11003/op operator_spec CUSTOM mylib.dll,QueryFollowersFile,getFollowers 
+OP2 input_ops OP1 repl_fact 2 routing random address tcp://localhost:11002/op, tcp://localhost:11003/op operator_spec CUSTOM mylib.dll,QueryFollowersFile,getFollowers 
 
-%OP3 input_ops OP2 repl_fact 2 routing hashing(1) address tcp://localhost:11004/op, tcp://localhost:11005/op operator_spec UNIQ 1
+OP3 input_ops OP2 repl_fact 2 routing hashing(1) address tcp://localhost:11004/op, tcp://localhost:11005/op operator_spec UNIQ 1
 
-%OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost0:11006/op operator_spec COUNT
+OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost:11006/op operator_spec COUNT
 
 %% The following commands can be sent by a PuppetMaster to the stream processing nodes:
 %%  Start OPERATOR_ID: tells the OPERATOR_ID operator to start processing tuples.
