--- a/PCS/PCS.csproj
+++ b/PCS/PCS.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="PCS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Replica.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibDADStorm\LibDADStorm.csproj">
