--- a/PCS/PCS.csproj
+++ b/PCS/PCS.csproj
@@ -46,5 +46,10 @@
       <Name>LibDADStorm</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="tweeters.data">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
