--- a/LibDADStorm/LibDADStorm.csproj
+++ b/LibDADStorm/LibDADStorm.csproj
@@ -32,17 +32,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IPCS.cs" />
     <Compile Include="Operators\CountOp.cs" />
     <Compile Include="Operators\CustomOp.cs" />
     <Compile Include="Operators\DupOp.cs" />
     <Compile Include="Operators\FilterOp.cs" />
     <Compile Include="Operators\UniqOp.cs" />
-    <Compile Include="Operator.cs" />
-    <Compile Include="IReplica.cs" />
+    <Compile Include="Tuple.cs" />
+    <Compile Include="Operators\Operator.cs" />
+    <Compile Include="Interfaces\IPCS.cs" />
+    <Compile Include="Interfaces\IReplica.cs" />
+    <Compile Include="ExampleCustomClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Operators\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
