--- a/PuppetMaster/dadstorm.config
+++ b/PuppetMaster/dadstorm.config
@@ -13,13 +13,13 @@ LoggingLevel light
 %%  operator spec OPERATOR_TYPE OPERATOR_PARAM1,. . ., OPERATOR_PARAMn
 %%
 
-OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/opa, tcp://localhost:11001/opb operator_spec FILTER 3,=,"www.tecnico.ulisboa.pt"
+OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/op11, tcp://localhost:11001/op12 operator_spec FILTER 3,=,"www.tecnico.ulisboa.pt"
 
-OP2 input_ops OP1 repl_fact 2 routing random address tcp://localhost:11002/opc, tcp://localhost:11003/opd operator_spec CUSTOM mylib.dll,QueryFollowersFile,getFollowers 
+OP2 input_ops OP1 repl_fact 2 routing random address tcp://localhost:11002/op21, tcp://localhost:11003/op22 operator_spec CUSTOM LibDADStorm.dll,ExampleCustomClass,getFollowers 
 
-OP3 input_ops OP2 repl_fact 2 routing hashing(1) address tcp://localhost:11004/ope, tcp://localhost:11005/opf operator_spec UNIQ 1
+OP3 input_ops OP2 repl_fact 2 routing hashing(1) address tcp://localhost:11004/op31, tcp://localhost:11005/op32 operator_spec UNIQ 1
 
-OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost:11006/opg operator_spec COUNT
+OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost:11006/op41 operator_spec COUNT
 
 %% The following commands can be sent by a PuppetMaster to the stream processing nodes:
 %%  Start OPERATOR_ID: tells the OPERATOR_ID operator to start processing tuples.
