--- a/PuppetMaster/dadstorm.config
+++ b/PuppetMaster/dadstorm.config
@@ -13,7 +13,7 @@ LoggingLevel light
 %%  operator spec OPERATOR_TYPE OPERATOR_PARAM1,. . ., OPERATOR_PARAMn
 %%
 
-OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/op11, tcp://localhost:11001/op12 operator_spec FILTER 3,=,"www.tecnico.ulisboa.pt"
+OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/op11, tcp://localhost:11001/op12 operator_spec FILTER 1,=,"cat"
 
 OP2 input_ops OP1 repl_fact 2 routing random address tcp://localhost:11002/op21, tcp://localhost:11003/op22 operator_spec CUSTOM LibDADStorm.dll,ExampleCustomClass,getFollowers 
 
@@ -29,6 +29,8 @@ OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost:11006/op41
 %%  Freeze OPERATOR_ID REP_ID: after receiving Freeze, the proecess continues receiving messages but stops processing them.
 %%  Unfreeze OPERATOR_ID REP_ID: a frozen process is back to normal execution. It processes all previous pended messages.
 %%  Wait x ms : This command instructs the pupper master to sleep for x milliseconds before reading and executing the following command in the script file.  
+
+Wait 10000
 
 Interval OP1 500
 Status
