--- a/Replica/Replica.csproj
+++ b/Replica/Replica.csproj
@@ -1,16 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F6ED7107-C080-401C-84BC-BDA91174B580}</ProjectGuid>
+    <ProjectGuid>{AB2774C7-326C-4A32-9002-CAAEA8D90D50}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PCS</RootNamespace>
-    <AssemblyName>PCS</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
+    <RootNamespace>Replica</RootNamespace>
+    <AssemblyName>Replica</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -25,7 +23,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <Optimize>true</Optimize>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ExternalConsole>true</ExternalConsole>
@@ -34,20 +32,27 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PCS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Replica.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibDADStorm\LibDADStorm.csproj">
       <Project>{0799C489-BF3E-497F-82DA-33A74C03BB78}</Project>
       <Name>LibDADStorm</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Replica\Replica.csproj">
-      <Project>{AB2774C7-326C-4A32-9002-CAAEA8D90D50}</Project>
-      <Name>Replica</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="tweeters.data">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
