--- a/LibDADStorm/LibDADStorm.csproj
+++ b/LibDADStorm/LibDADStorm.csproj
@@ -41,8 +41,9 @@
     <Compile Include="Operators\Operator.cs" />
     <Compile Include="Interfaces\IPCS.cs" />
     <Compile Include="Interfaces\IReplica.cs" />
-    <Compile Include="ExampleCustomClass.cs" />
+    <Compile Include="QueryFollowersFile.cs" />
     <Compile Include="Interfaces\IPM.cs" />
+    <Compile Include="Operators\OutputOp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Operators\" />
