--- a/PuppetMaster/Datafiles/dadstorm.config
+++ b/PuppetMaster/Datafiles/dadstorm.config
@@ -13,13 +13,13 @@ LoggingLevel full
 %%  operator spec OPERATOR_TYPE OPERATOR_PARAM1,. . ., OPERATOR_PARAMn
 %%
 
-OP1 input_ops tweeters.data repl_fact 2 routing hashing(1) address tcp://localhost:11000/op11, tcp://localhost:11001/op12 operator_spec FILTER 1,=,"cat"
+OP1 input ops tweeters.data rep fact 2 routing hashing(1) address tcp://localhost:11010/op10, tcp://localhost:11011/op11 operator spec FILTER 3,=,"www.tecnico.ulisboa.pt"
 
-OP2 input_ops OP1 repl_fact 2 routing random address tcp://localhost:11002/op21, tcp://localhost:11003/op22 operator_spec CUSTOM LibDADStorm.dll,ExampleCustomClass,getFollowers 
+OP2 input ops OP1 rep fact 2 routing random address tcp://localhost:11020/op20, tcp://localhost:11021/op21 operator spec CUSTOM LibDADStorm.dll,QueryFollowersFile,getFollowers 
 
-OP3 input_ops OP2 repl_fact 2 routing hashing(1) address tcp://localhost:11004/op31, tcp://localhost:11005/op32 operator_spec UNIQ 1
+OP3 input ops OP2 rep fact 2 routing hashing(1) address tcp://localhost:11030/op30, tcp://localhost:11031/op31 operator spec UNIQ 1
 
-OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost:11006/op41 operator_spec COUNT
+OP4 input ops OP3 rep fact 1 routing primary address tcp://localhost:11040/op40 operator spec COUNT
 
 %% The following commands can be sent by a PuppetMaster to the stream processing nodes:
 %%  Start OPERATOR_ID: tells the OPERATOR_ID operator to start processing tuples.
@@ -30,8 +30,6 @@ OP4 input_ops OP3 repl_fact 1 routing primary address tcp://localhost:11006/op41
 %%  Unfreeze OPERATOR_ID REP_ID: a frozen process is back to normal execution. It processes all previous pended messages.
 %%  Wait x ms : This command instructs the pupper master to sleep for x milliseconds before reading and executing the following command in the script file.  
 
-Wait 3000
-
 Interval OP1 500
 Status
 Start OP1
@@ -40,11 +38,14 @@ Start OP3
 Start OP4
 
 Status
+
+Wait 5000
+
 % Crash OP1 0 crashes replica 0 of OP1
 Crash OP1 0
 % Freeze OP2 1 freezes replica 1 of OP2
 Freeze OP2 1
-Wait 5000
+Wait 10000
 % Unfreeze OP2 1 unfreezes replica 1 of OP2
 Unfreeze OP2 1
 Status
