send not working

--- a/PuppetMaster/Datafiles/dadstorm.config
+++ b/PuppetMaster/Datafiles/dadstorm.config
@@ -6,29 +6,29 @@ Semantics at-most-once
 % LoggingLevel full | light
 LoggingLevel full
 
-%% The following lines define an operator. 
+%% The following lines define an operator.
 %%  OPERATOR_ID input ops SOURCE_OP_ID1|FILEPATH1,. . ., SOURCE_OP_IDn|FILEPATHn
 %%  rep fact REPL_FACTOR routing primary|hashing|random
 %%  address URL1,. . .,URLn
 %%  operator spec OPERATOR_TYPE OPERATOR_PARAM1,. . ., OPERATOR_PARAMn
 %%
 
-OP1 input ops tweeters.data rep fact 2 routing hashing(1) address tcp://localhost:11010/op10, tcp://localhost:11011/op11 operator spec FILTER 3,=,"www.tecnico.ulisboa.pt"
+OP1 input ops tweeters.data rep fact 2 routing hashing(1) address tcp://localhost:11010/op, tcp://localhost:11011/op operator spec FILTER 3,=,"www.tecnico.ulisboa.pt"
 
-OP2 input ops OP1 rep fact 2 routing random address tcp://localhost:11020/op20, tcp://localhost:11021/op21 operator spec CUSTOM LibDADStorm.dll,QueryFollowersFile,getFollowers 
+OP2 input ops OP1 rep fact 2 routing random address tcp://localhost:11020/op, tcp://localhost:11021/op operator spec CUSTOM LibDADStorm.dll,QueryFollowersFile,getFollowers
 
-OP3 input ops OP2 rep fact 2 routing hashing(1) address tcp://localhost:11030/op30, tcp://localhost:11031/op31 operator spec UNIQ 1
+OP3 input ops OP2 rep fact 2 routing hashing(1) address tcp://localhost:11030/op, tcp://localhost:11031/op operator spec UNIQ 1
 
-OP4 input ops OP3 rep fact 1 routing primary address tcp://localhost:11040/op40 operator spec COUNT
+OP4 input ops OP3 rep fact 1 routing primary address tcp://localhost:11040/op operator spec COUNT
 
 %% The following commands can be sent by a PuppetMaster to the stream processing nodes:
 %%  Start OPERATOR_ID: tells the OPERATOR_ID operator to start processing tuples.
 %%  Interval OPERATOR_ID X ms: the operator should sleep X milliseconds between consecutive events.
 %%  Status: make all nodes in the system to print its current status.
-%%  Crash OPERATOR_ID REP_ID: force a process, i.e. a replica of an operator, to crash. 
+%%  Crash OPERATOR_ID REP_ID: force a process, i.e. a replica of an operator, to crash.
 %%  Freeze OPERATOR_ID REP_ID: after receiving Freeze, the proecess continues receiving messages but stops processing them.
 %%  Unfreeze OPERATOR_ID REP_ID: a frozen process is back to normal execution. It processes all previous pended messages.
-%%  Wait x ms : This command instructs the pupper master to sleep for x milliseconds before reading and executing the following command in the script file.  
+%%  Wait x ms : This command instructs the pupper master to sleep for x milliseconds before reading and executing the following command in the script file.
 
 Interval OP1 500
 Status
@@ -38,9 +38,6 @@ Start OP3
 Start OP4
 
 Status
-
-Wait 5000
-
 % Crash OP1 0 crashes replica 0 of OP1
 Crash OP1 0
 % Freeze OP2 1 freezes replica 1 of OP2
