--- a/PuppetMaster/Datafiles/dadstorm.config
+++ b/PuppetMaster/Datafiles/dadstorm.config
@@ -15,7 +15,7 @@ LoggingLevel full
 
 OP1 input ops tweeters.data rep fact 2 routing hashing(1) address tcp://localhost:11010/op, tcp://localhost:11011/op operator spec FILTER 3,=,"www.tecnico.ulisboa.pt"
 
-OP2 input ops OP1 rep fact 2 routing random address tcp://localhost:11020/op, tcp://localhost:11021/op operator spec CUSTOM LibDADStorm.dll,QueryFollowersFile,getFollowers
+OP2 input ops OP1 rep fact 2 routing random address tcp://localhost:11020/op, tcp://localhost:11021/op operator spec CUSTOM mylib.dll,QueryFollowersFile,getFollowers
 
 OP3 input ops OP2 rep fact 2 routing hashing(1) address tcp://localhost:11030/op, tcp://localhost:11031/op operator spec UNIQ 1
 
