--- a/Replica/Replica.csproj
+++ b/Replica/Replica.csproj
@@ -55,7 +55,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="followers.dat" />
+    <EmbeddedResource Include="followers.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
