--- a/PuppetMaster/Datafiles/dadstorm.config
+++ b/PuppetMaster/Datafiles/dadstorm.config
@@ -21,6 +21,8 @@ OP3 input ops OP2 rep fact 2 routing hashing(1) address tcp://localhost:11030/op
 
 OP4 input ops OP3 rep fact 1 routing primary address tcp://localhost:11040/op operator spec COUNT
 
+OP5 input ops OP4 rep fact 1 routing primary address tcp://localhost:11050/op operator spec CUSTOM mylib.dll,OutputOperator,CustomOperation
+
 %% The following commands can be sent by a PuppetMaster to the stream processing nodes:
 %%  Start OPERATOR_ID: tells the OPERATOR_ID operator to start processing tuples.
 %%  Interval OPERATOR_ID X ms: the operator should sleep X milliseconds between consecutive events.
@@ -36,6 +38,7 @@ Start OP1
 Start OP2
 Start OP3
 Start OP4
+Start OP5
 
 Status
 % Crash OP1 0 crashes replica 0 of OP1
