--- a/Replica/Replica.csproj
+++ b/Replica/Replica.csproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{AB2774C7-326C-4A32-9002-CAAEA8D90D50}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Replica</RootNamespace>
+    <RootNamespace>DADStorm</RootNamespace>
     <AssemblyName>Replica</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="History.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replica.cs" />
   </ItemGroup>
