--- a/PuppetMaster/Datafiles/dadstorm.config
+++ b/PuppetMaster/Datafiles/dadstorm.config
@@ -1,7 +1,7 @@
 ﻿%% This configuration file describes four operators that are used to compute the reach of a URL on Twitter,
 %%
 % Semantics at-most-once | at-least-once | exactly-once
-Semantics at-most-once
+Semantics at-least-once
 
 % LoggingLevel full | light
 LoggingLevel full
