--- a/PuppetMaster/PuppetMaster.csproj
+++ b/PuppetMaster/PuppetMaster.csproj
@@ -140,11 +140,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Parser.cs" />
-    <EmbeddedResource Include="Datafiles\dadstorm.config">
+    <EmbeddedResource Include="dadstorm.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Datafiles\example.script">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
